# lobSimulations

./: .gitignore  .temp.py.swp  Benchmarking.ipynb  LICENSE  README.md  \  environment.yml  fakeData_Params_sod_eod_dictTOD_constt  fake_ParamsInferredWCutoff_sod_eod_true  fake_ParamsInferredWCutoff_sod_eod_true_optimize  hawkesFit.ipynb  logger.txt  logging.txt  plotting.ipynb  runner.ipynb  runner_test.ipynb  setup_dependencies.sh  temp.py  tickSimulations.ipynb    
HJBQVI/: DGM.py  (+7 more)
HawkesRLTrading/: AR_RL_Trainer.py  AR_RL_runner.py  AR_RL_runner2.py  LICENSE  MOTAtestrunner.py  README.MD  __init__.py  logParser.py  noRL_runner.py  npyreader.py  parallel_runner.py  requirements.txt  runner.py  runner_hjb.py  setup.cfg
HawkesRLTrading/HawkesRLTrading.egg-info/: PKG-INFO  SOURCES.txt
HawkesRLTrading/src/: AAPL.OQ_ParamsInferredWCutoffEyeMu_sparseInfer_Symm_2019-01-02_2019-12-31_CLSLogLin_10  INTC.OQ_Params_2019-01-02_2019-03-29_dictTOD_constt  Kernel.py  Notes.txt  Orders.py
HawkesRLTrading/src/Envs/: HawkesRLTradingEnv.py  ParallelTrainer.py  __init__.py
RLenv/: AgentClass.py  Exceptions.py  Kernel.py  OrderBook.py  Orders.py  __init__.py  setup.cfg  setup.py  tradingEnv.py
RLenv/Agents/: AgentClass.py  RLAgent
RLenv/Envs/: HawkesRLTradingEnv.py
RLenv/Messages/: AgentMessages.py  ExchangeMessages.py  Message.py  OrderMessages.py
RLenv/SimulationEntities/: Entity.py  Exchange.py  GymTradingAgent.py  Kernel.py  RLAgent  RLAgent.py  TradingAgent.py
RLenv/Stochastic_Processes/: Arrival_Models.py  Stochastic_Models.py
RLenv/Utils/: logging_config.py
(+197 files in other folders)
