[metadata]
name = HawkesRLTrading
description = HawkesRLTrading: An entity-based discrete event reinforcement-learning simulation environment for equities trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tkwang657/lobSimulationsHawkes

[options]
packages = find:
python_requires = >=3.8