[metadata]
name = HawkesRLTradingEnv
description = HawkesRLTradingEnv: An entity-based discrete event eimulation environment for equities trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tuckerbalch/jpmc-abides

[options]
packages = find:
python_requires = >=3.8